--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
   </div>
 
 
+  <audio autoplay="autoplay" controls>
+    <source src="img/perfecta-letra.mp3" type="audio/mpeg">
+  </audio>
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
